-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0, 5.4.1
-
None
-
Windows, OS X
-
I11d6ccf7c0b51644a5ce2d5c3fc59e2e4812755d
Precondition:
QListView having these properties:
horizontalScrollBarPolicy = Qt::ScrollBarAsNeeded
verticalScrollBarPolicy = Qt::ScrollBarAsNeeded
Actual Result:
QListView doesn't show horizontal scroll bar when the content exceeds the right edge and doesn't exceeds the bottom edge.
Expected Result:
QListView should show horizontal scroll bar and not show vertical scroll bar.
Special notes:
1. The bug appeared when fixing this bug: QTBUG-39902
2. The bug is located in function:
void QCommonListViewBase::updateHorizontalScrollBar(const QSize &step)
3. This bug is reproduced only when content width is bigger than viewport width and less than viewPort width + vertical scroll bar width
- relates to
-
QTBUG-48710 The visibility of the horizontal scrollbar should be accounted for when calculating the sizes of items
-
- Reported
-
-
QTBUG-62818 QPlainTextEdit::setPlainText goes to infinite loop
-
- Closed
-
- resulted in
-
QTBUG-48579 QListWidget crashes with scroll mode set to ScrollPerPixel
-
- Closed
-
-
QTBUG-71618 [REG 5.5->5.9, 4.8->5.9] Scrollbar is not shown when use QAbstractItemView::ScrollPerPixel and viewport on QListView is set fixed height
-
- Closed
-